--- a/about.html
+++ b/about.html
@@ -5,7 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-
+    <style>
+        body {
+            background-color: #CAE5FF;
+            color: #FFFFFF;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        nav {
+            background-color: #ACEDFF;
+        }
+        a {
+            color:#89BBFE;
+        }
+        article {
+            background-color: #615D6C;
+        }
+        header {
+            background-color: #6f8eb8;
+        }
+    </style>
 </head>
 
 <body>
