--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <h1>My Website</h1>
+    <h1>my website</h1>
     <nav>
         <a href="index.html">Home</a> |
         <a href="about.html">About</a> |
@@ -37,12 +37,11 @@
 
     <article>
         <header>
-            <h2>Welcome to my site!</h2>
+            <h2>welcome to my site!</h2>
         </header>
-        <p>Yo, my name's Julien.</p>
-        <p>Here's some additional info..</p>
+        <p>yo, my name's Julien.</p>
         <img src="icecube.png" alt="an ice cube" height="70" width="70">
-        <p>^ And a stock image of an ice cube</p>
+        <p>^ heres a stock image of an ice cube</p>
     </article>
 </body>
 
