--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>my website</title>
     <style>
         body {
             background-color: #CAE5FF;
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <h1>My Website</h1>
+    <h1>my website</h1>
     <nav>
         <a href="index.html">Home</a> |
         <a href="about.html">About</a> |
@@ -37,8 +37,8 @@
 
     <article>
         <header>
-            <h2>I have a few dogs and a couple cats.</h2>
-            <p> I'm a person if you didn't know already.</p>
+            <h2>this is an about page!</h2>
+            <p>i haven't put anything here yet..</p>
         </header>
     </article>
 </body>
