--- a/about.html
+++ b/about.html
@@ -7,19 +7,25 @@
     <title>my website</title>
     <style>
         body {
-            background-color: #CAE5FF;
+            background-image: url("bg.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
             color: #FFFFFF;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
+
         nav {
-            background-color: #ACEDFF;
+            background-color: #439ac2;
         }
+
         a {
-            color:#89BBFE;
+            color: #ffffff;
         }
+
         article {
             background-color: #615D6C;
         }
+
         header {
             background-color: #6f8eb8;
         }
@@ -29,9 +35,9 @@
 <body>
     <h1>my website</h1>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="game/index.html">Game</a>
+        <a href="index.html">home</a> |
+        <a href="about.html">about</a> |
+        <a href="game/index.html">game</a>
     </nav>
 
 
