--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>my website</title>
     <style>
         body {
+            background-image: url("bg.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
             background-color: #CAE5FF;
             color: #FFFFFF;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         nav {
-            background-color: #ACEDFF;
+            background-color: #439ac2;
         }
         a {
-            color:#89BBFE;
+            color:#ffffff;
         }
         article {
-            background-color: #615D6C;
+            background-color: #6f8eb8;
         }
         header {
             background-color: #6f8eb8;
@@ -29,9 +31,9 @@
 <body>
     <h1>my website</h1>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="game/index.html">Game</a>
+        <a href="index.html">home</a> |
+        <a href="about.html">about</a> |
+        <a href="game/index.html">game</a>
     </nav>
 
 
@@ -40,7 +42,7 @@
             <h2>welcome to my site!</h2>
         </header>
         <p>yo, my name's Julien.</p>
-        <img src="icecube.png" alt="an ice cube" height="70" width="70">
+        <a href="dvd.html"><img src="icecube.png" alt="an ice cube" height="70" width="70"></a>
         <p>^ heres a stock image of an ice cube</p>
     </article>
 </body>
